--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-28 [《无依之地》：那些居无定所的美国人](/articles/nyt/1046916.md)
+
+4-28 [中美之间必有一战吗？](/articles/nyt/1046917.md)
+
 4-28 [“这是谋杀”：印度疫情失控，疾病和死亡无处不在](/articles/nyt/1046918.md)
 
 4-28 [麦香鱼，我理想中的“完美”快餐](/articles/nyt/1046919.md)
@@ -596,8 +600,4 @@
 2-4 [昂山素季被控非法进口对讲机](/articles/nyt/1047214.md)
 
 2-4 [简报：世卫专家访问武汉病毒所；昂山素季被缅甸军方起诉](/articles/nyt/1047215.md)
-
-2-3 [香港民主反对派的最后一道防线：区议员](/articles/nyt/1047216.md)
-
-2-3 [在仰光亲历缅甸政变](/articles/nyt/1047217.md)
 
