--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-28 [拜登周三赴国会演说 民主党领袖：盼强调如何与中国对抗和竞争](/articles/voa/1041185.md)
+
 4-28 [拜登政府称头100天联合盟友应对中国的方针初见成效](/articles/voa/1041186.md)
 
 4-28 [泰国活动人士街头遭镇压后转向Clubhouse](/articles/voa/1041187.md)
@@ -598,6 +600,4 @@
 4-15 [弗洛伊德谋杀案辩方：前警员执法手段并非单一致死原因](/articles/voa/1041483.md)
 
 4-15 [克里抵达上海，拜登寻求美中合作的首次努力面临考验](/articles/voa/1041484.md)
-
-4-15 [美中关系紧张 日本究竟何去何从](/articles/voa/1041485.md)
 
