--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-28 [印度火葬场来不及火化新冠肺炎亡者](/articles/dw/1042751.md)
+
 4-28 [布林肯会见非洲元首 吁注意中国的影响力](/articles/dw/1042752.md)
 
 4-28 [美国将放宽限制  允许中国学生赴美](/articles/dw/1042753.md)
@@ -598,6 +600,4 @@
 4-10 [新冠疫情中 妈祖展开绕境](/articles/dw/1043049.md)
 
 4-10 [德语媒体：中欧俄相争，谁人得渔利？](/articles/dw/1043050.md)
-
-4-10 [德国各州自说自话 防疫规定不同调](/articles/dw/1043051.md)
 
