--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-28 [美参议院核准总统的国防政策次长人选 国防部长称卡尔是制定政策应对中国挑战的正确人选](/articles/voa/1041183.md)
+
 4-28 [学者：中共打压人民信仰自由 与台湾形成鲜明对比](/articles/voa/1041184.md)
 
 4-28 [拜登周三赴国会演说 民主党领袖：盼强调如何与中国对抗和竞争](/articles/voa/1041185.md)
@@ -598,6 +600,4 @@
 4-15 [布林肯突访喀布尔 为美军撤离做准备](/articles/voa/1041481.md)
 
 4-15 [蔡英文会见美国访台代表团 称将与美国共同守护印太和平](/articles/voa/1041482.md)
-
-4-15 [弗洛伊德谋杀案辩方：前警员执法手段并非单一致死原因](/articles/voa/1041483.md)
 
