--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+4-28 [周正毅生日宴6主持涉收费被停职  调查组进驻查何谓“不忘初心”](/articles/rfa/1045744.md)
+
+4-28 [中国卫健委禁强制接种疫苗  上海有商厦禁不打疫苗者出入](/articles/rfa/1045745.md)
+
+4-28 [北京控制的香港立法会通过《入境条例修订》  港人忧限制出入境自由](/articles/rfa/1045746.md)
+
 4-28 [拜登百日的对华政策: “对抗”为主、“合作”难成](/articles/rfa/1045747.md)
 
 4-28 [百年党庆前  中共加码高校管控和红色教育](/articles/rfa/1045748.md)
@@ -594,10 +600,4 @@
 3-26 [一场抵制洋货的“爱国秀”  谁搬石头砸自己的脚？](/articles/rfa/1046042.md)
 
 3-26 [“国际发展合作”取代“对外援助”     中国的局限性](/articles/rfa/1046043.md)
-
-3-26 [拜登强调为中国人权发声    学者：应团结因应北京的抵制](/articles/rfa/1046044.md)
-
-3-26 [美国推出新规   中企在美上市将困难重重](/articles/rfa/1046045.md)
-
-3-26 [欧洲议员: 中国用民族主义经济施压  反言论自由](/articles/rfa/1046046.md)
 
