--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 4-28 [歪脑｜评《无依之地》：作为丧家之犬，我真羡慕赵婷](/articles/cdt/383182.md)
 
+4-28 [【麻辣总局】通过游戏的形式传播党史，你疯了？](/articles/cdt/383185.md)
+
 4-28 [奇客资讯｜猫扑宣布“为营造良好的网络环境”关闭发帖功能](/articles/cdt/383189.md)
 
 4-28 [【弄个大新闻】日方要求删除《神奈氚冲浪里》 赵立坚反手一个置顶](/articles/cdt/383198.md)
@@ -598,6 +600,4 @@
 3-29 [【图说天朝】我们一起打疫苗，一起苗苗苗苗苗](/articles/cdt/384425.md)
 
 3-29 [编程随想｜新疆棉花——从“人权争议”到“外交对抗”（外媒报道30多篇）](/articles/cdt/384428.md)
-
-3-29 [【CDT周报】第十期：又加速了！早上出个消息，下午开始抵制，晚上就关店歇业了](/articles/cdt/384436.md)
 
