--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-28 [人口不到14亿？中国将报告大跃进以来首次人口下降](/articles/voa/1041181.md)
+
 4-28 [强化高校党建 中共老调重弹强调“又红又专”](/articles/voa/1041182.md)
 
 4-28 [美参议院核准总统的国防政策次长人选 国防部长称卡尔是制定政策应对中国挑战的正确人选](/articles/voa/1041183.md)
@@ -598,6 +600,4 @@
 4-16 [澳总理批评威权统治 警告世界正面临“巨大两级分化”风险](/articles/voa/1041479.md)
 
 4-16 [美国驱逐10名俄罗斯驻美外交人员 并对俄实施多项严厉制裁](/articles/voa/1041480.md)
-
-4-15 [布林肯突访喀布尔 为美军撤离做准备](/articles/voa/1041481.md)
 
