--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-28 [民调：拜登上任后盟友对美国好感度上升，中国却对美国好感度急剧下降](/articles/voa/1041178.md)
+
+4-28 [专家：中国3艘军舰列装 意在与美竞争夺取制海权](/articles/voa/1041179.md)
+
 4-28 [美国总统拜登执政届满100天 今晚发表重要讲话](/articles/voa/1041180.md)
 
 4-28 [人口不到14亿？中国将报告大跃进以来首次人口下降](/articles/voa/1041181.md)
@@ -596,8 +600,4 @@
 4-16 [香港民主派组织游行抗议全民国家安全教育日 忧大陆化教材洗脑](/articles/voa/1041476.md)
 
 4-16 [伊拉克军方：巴格达发生爆炸 至少一人死亡多人受伤](/articles/voa/1041477.md)
-
-4-16 [时事大家谈: 克里到访上海，气候合作能否重启美中关系？](/articles/voa/1041478.md)
-
-4-16 [澳总理批评威权统治 警告世界正面临“巨大两级分化”风险](/articles/voa/1041479.md)
 
