--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-29 [两岸军事预算、兵源差距逾十倍 美国比台湾急？](/articles/rfa/1045742.md)
+
 4-28 [台积电南京扩产  大陆反对声浪高过台湾](/articles/rfa/1045743.md)
 
 4-28 [周正毅生日宴6主持涉收费被停职  调查组进驻查何谓“不忘初心”](/articles/rfa/1045744.md)
@@ -598,6 +600,4 @@
 3-26 [抵抗拆迁被指妨碍公务 重庆四人遭重判](/articles/rfa/1046040.md)
 
 3-26 [中方反对“渲染中国军事威胁” 却增强对台军机侵扰](/articles/rfa/1046041.md)
-
-3-26 [一场抵制洋货的“爱国秀”  谁搬石头砸自己的脚？](/articles/rfa/1046042.md)
 
