--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-29 [美国政商军界联手帮助印度度过新一波惨烈新冠疫情](/articles/voa/1041177.md)
+
 4-28 [民调：拜登上任后盟友对美国好感度上升，中国却对美国好感度急剧下降](/articles/voa/1041178.md)
 
 4-28 [专家：中国3艘军舰列装 意在与美竞争夺取制海权](/articles/voa/1041179.md)
@@ -598,6 +600,4 @@
 4-16 [罗马尼亚政府批准法案 实际将禁止中国和华为参与5G网络](/articles/voa/1041475.md)
 
 4-16 [香港民主派组织游行抗议全民国家安全教育日 忧大陆化教材洗脑](/articles/voa/1041476.md)
-
-4-16 [伊拉克军方：巴格达发生爆炸 至少一人死亡多人受伤](/articles/voa/1041477.md)
 
