--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-29 [参加阿波罗11号登月的美国宇航员柯林斯逝世 享年90岁](/articles/voa/1041172.md)
+
 4-29 [香港立法会三读通过入境条例修订 民间组织批闭关锁港或变大监狱](/articles/voa/1041173.md)
 
 4-29 [时事大家谈: 赵婷获奥斯卡大奖，”中国骄傲“为何被全网封杀？](/articles/voa/1041174.md)
@@ -598,6 +600,4 @@
 4-16 [美议员呼吁拜登政府加强对中国的芯片制造软件出口管制](/articles/voa/1041470.md)
 
 4-16 [美国进一步制裁俄罗斯 拜登：不会允许外强干涉美国选举而不受惩罚](/articles/voa/1041471.md)
-
-4-16 [克里访问上海 美国再次呼吁所有国家提高应对气候变化的雄心](/articles/voa/1041472.md)
 
