--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-29 [LGBT权促会 | 那个被劝退的同性恋学生，决定起诉学校](/articles/cdt/383177.md)
+
 4-28 [歪脑｜评《无依之地》：作为丧家之犬，我真羡慕赵婷](/articles/cdt/383182.md)
 
 4-28 [【麻辣总局】通过游戏的形式传播党史，你疯了？](/articles/cdt/383185.md)
@@ -598,6 +600,4 @@
 3-29 [狐度工作室｜凉山冕宁，买根火柴都要实名](/articles/cdt/384409.md)
 
 3-29 [【图说天朝】我们一起打疫苗，一起苗苗苗苗苗](/articles/cdt/384425.md)
-
-3-29 [编程随想｜新疆棉花——从“人权争议”到“外交对抗”（外媒报道30多篇）](/articles/cdt/384428.md)
 
