--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-29 [美国海豹突击队转型，集中面对中俄威胁](/articles/voa/1041170.md)
+
+4-29 [印度疫情下“四国疫苗伙伴”能否有效对抗北京影响？](/articles/voa/1041171.md)
+
 4-29 [参加阿波罗11号登月的美国宇航员柯林斯逝世 享年90岁](/articles/voa/1041172.md)
 
 4-29 [香港立法会三读通过入境条例修订 民间组织批闭关锁港或变大监狱](/articles/voa/1041173.md)
@@ -596,8 +600,4 @@
 4-16 [拜登和菅义伟周五将深入讨论所有中国相关议题](/articles/voa/1041468.md)
 
 4-16 [美国总统拜登会见国会亚太裔党团成员](/articles/voa/1041469.md)
-
-4-16 [美议员呼吁拜登政府加强对中国的芯片制造软件出口管制](/articles/voa/1041470.md)
-
-4-16 [美国进一步制裁俄罗斯 拜登：不会允许外强干涉美国选举而不受惩罚](/articles/voa/1041471.md)
 
