--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-29 [中宣部学习会淡化文革  忠字舞民间回魂?](/articles/rfa/1045734.md)
+
+4-29 [美中必有一战？专家：须降低战略竞争风险](/articles/rfa/1045735.md)
+
 4-29 [中国人口或现六十年来首下降       “内循环”恐成“内坍塌”](/articles/rfa/1045736.md)
 
 4-29 [保障房没有供水  陕西脱贫造假打脸习近平](/articles/rfa/1045737.md)
@@ -596,8 +600,4 @@
 3-27 [中国渔船持续集结牛轭礁    在南海收集数据](/articles/rfa/1046032.md)
 
 3-27 [中国“打击非法社会组织”专项行动蔓延  波及五类团体](/articles/rfa/1046033.md)
-
-3-27 [北京外送骑士联盟“盟主”确认被捕  已见律师](/articles/rfa/1046034.md)
-
-3-27 [中国离婚率爆增 背后原因不简单](/articles/rfa/1046035.md)
 
