--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-29 [【CDT推荐】本周推荐媒体](/articles/cdt/383172.md)
+
 4-29 [LGBT权促会 | 那个被劝退的同性恋学生，决定起诉学校](/articles/cdt/383177.md)
 
 4-28 [歪脑｜评《无依之地》：作为丧家之犬，我真羡慕赵婷](/articles/cdt/383182.md)
@@ -598,6 +600,4 @@
 3-29 [曹教授｜连执法权都能外包 政府让保安公司道歉好意思吗](/articles/cdt/384408.md)
 
 3-29 [狐度工作室｜凉山冕宁，买根火柴都要实名](/articles/cdt/384409.md)
-
-3-29 [【图说天朝】我们一起打疫苗，一起苗苗苗苗苗](/articles/cdt/384425.md)
 
