--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-29 [马云的“倒下”和中国金融体系的未来](/articles/nyt/1046914.md)
+
 4-28 [纳瓦尔尼才是俄罗斯真正的领袖](/articles/nyt/1046915.md)
 
 4-28 [《无依之地》：那些居无定所的美国人](/articles/nyt/1046916.md)
@@ -598,6 +600,4 @@
 2-4 [从马三家到你的衣柜：廉价“中国制造”敲响的人权警钟](/articles/nyt/1047212.md)
 
 2-4 [记录亚裔美国人的生活、抗争与历史：摄影师李扬国逝世](/articles/nyt/1047213.md)
-
-2-4 [昂山素季被控非法进口对讲机](/articles/nyt/1047214.md)
 
