--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-29 [推土机前的金漆招牌——香港电台如何被迅速整治？](/articles/dw/1042737.md)
+
 4-29 [中国未兑现贸协承诺 华盛顿要加强审查](/articles/dw/1042738.md)
 
 4-29 [欧盟：中俄意图透过疫苗假讯息分裂西方国家](/articles/dw/1042739.md)
@@ -598,6 +600,4 @@
 4-11 [墙外文摘：如何把北京冬奥会当筹码？](/articles/dw/1043035.md)
 
 4-11 [备不时之需 德国出台新志愿兵役计划](/articles/dw/1043036.md)
-
-4-11 [中国疾控中心：当前国产疫苗保护率不高](/articles/dw/1043037.md)
 
