--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-29 [韩国的百年职业——“海女”](/articles/dw/1042736.md)
+
 4-29 [推土机前的金漆招牌——香港电台如何被迅速整治？](/articles/dw/1042737.md)
 
 4-29 [中国未兑现贸协承诺 华盛顿要加强审查](/articles/dw/1042738.md)
@@ -598,6 +600,4 @@
 4-11 [谈判紧要关头 伊朗议会指控总统鲁哈尼违法](/articles/dw/1043034.md)
 
 4-11 [墙外文摘：如何把北京冬奥会当筹码？](/articles/dw/1043035.md)
-
-4-11 [备不时之需 德国出台新志愿兵役计划](/articles/dw/1043036.md)
 
