--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-29 [“对牛弹琴”？丹麦农舍为奶牛举办音乐会](/articles/nyt/1046912.md)
+
 4-29 [美国走向大政府时代？拜登上任百日推4万亿美元经济议程](/articles/nyt/1046913.md)
 
 4-29 [马云的“倒下”和中国金融体系的未来](/articles/nyt/1046914.md)
@@ -598,6 +600,4 @@
 2-4 [普京，美国的有毒前男友](/articles/nyt/1047210.md)
 
 2-4 [当世界陷入“制裁疲劳”，拜登如何推动民主？](/articles/nyt/1047211.md)
-
-2-4 [从马三家到你的衣柜：廉价“中国制造”敲响的人权警钟](/articles/nyt/1047212.md)
 
