--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-29 [为配合百年党庆宣传    禁完网络论坛再禁脱口秀](/articles/rfa/1045733.md)
+
 4-29 [中宣部学习会淡化文革  忠字舞民间回魂?](/articles/rfa/1045734.md)
 
 4-29 [美中必有一战？专家：须降低战略竞争风险](/articles/rfa/1045735.md)
@@ -598,6 +600,4 @@
 3-27 [拜登参加欧盟峰会      呼吁确保民主国家制定规则](/articles/rfa/1046031.md)
 
 3-27 [中国渔船持续集结牛轭礁    在南海收集数据](/articles/rfa/1046032.md)
-
-3-27 [中国“打击非法社会组织”专项行动蔓延  波及五类团体](/articles/rfa/1046033.md)
 
