--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-29 [【网络民议】国办：消除男尊女卑传宗接代等落后观念  网友：以为回到了新中国刚成立的时候](/articles/cdt/383160.md)
+
+4-29 [【网络民议】国家统计局：人口普查数据还在处理  网友：快码加编](/articles/cdt/383161.md)
+
 4-29 [【CDT推荐】本周推荐媒体](/articles/cdt/383172.md)
 
 4-29 [LGBT权促会 | 那个被劝退的同性恋学生，决定起诉学校](/articles/cdt/383177.md)
@@ -596,8 +600,4 @@
 3-30 [【网络民议】”中国外交部成了国际流氓养成训练营“](/articles/cdt/384402.md)
 
 3-29 [导筒directube｜香港电影的黑色星期一](/articles/cdt/384403.md)
-
-3-29 [曹教授｜连执法权都能外包 政府让保安公司道歉好意思吗](/articles/cdt/384408.md)
-
-3-29 [狐度工作室｜凉山冕宁，买根火柴都要实名](/articles/cdt/384409.md)
 
