--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-29 [受美国制裁影响 华为第一季度营收大幅下滑](/articles/voa/1041155.md)
+
+4-29 [美国贸易代表继续与药商商讨暂停疫苗专利保护](/articles/voa/1041156.md)
+
 4-29 [美国猛醒： 药品供应的命门不可掐在中国手里](/articles/voa/1041157.md)
 
 4-29 [美参议员致函特鲁多支持哈利法克斯论坛颁奖给蔡英文](/articles/voa/1041158.md)
@@ -596,8 +600,4 @@
 4-17 [非政府组织敦促美国奥委会采取行动 将北京冬奥会移到别国举办](/articles/voa/1041453.md)
 
 4-17 [美财政部发布汇率报告：台湾符合汇率操纵标准 中国列入观察名单](/articles/voa/1041454.md)
-
-4-17 [伊朗据称将浓缩铀丰度升至60% 伊核协议签约国表担忧](/articles/voa/1041455.md)
-
-4-16 [美国警方开枪事件接连发生 明、伊两州民众和平上街抗议](/articles/voa/1041456.md)
 
