--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-29 [中国科技巨头的“狗咬狗”式竞争](/articles/nyt/1046911.md)
+
 4-29 [“对牛弹琴”？丹麦农舍为奶牛举办音乐会](/articles/nyt/1046912.md)
 
 4-29 [美国走向大政府时代？拜登上任百日推4万亿美元经济议程](/articles/nyt/1046913.md)
@@ -598,6 +600,4 @@
 2-5 [简报：英国吊销CGTN广播执照；中国新一波疫情趋于平稳](/articles/nyt/1047209.md)
 
 2-4 [普京，美国的有毒前男友](/articles/nyt/1047210.md)
-
-2-4 [当世界陷入“制裁疲劳”，拜登如何推动民主？](/articles/nyt/1047211.md)
 
