--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-29 [《头彩》：超级富人值得同情吗？](/articles/nyt/1046910.md)
+
 4-29 [中国科技巨头的“狗咬狗”式竞争](/articles/nyt/1046911.md)
 
 4-29 [“对牛弹琴”？丹麦农舍为奶牛举办音乐会](/articles/nyt/1046912.md)
@@ -598,6 +600,4 @@
 2-5 [英国监管机构吊销CGTN广播执照](/articles/nyt/1047208.md)
 
 2-5 [简报：英国吊销CGTN广播执照；中国新一波疫情趋于平稳](/articles/nyt/1047209.md)
-
-2-4 [普京，美国的有毒前男友](/articles/nyt/1047210.md)
 
