--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-29 [继芯片 “大跃进”后   国产电动车 “大跃进”如箭在弦](/articles/rfa/1045732.md)
+
 4-29 [为配合百年党庆宣传    禁完网络论坛再禁脱口秀](/articles/rfa/1045733.md)
 
 4-29 [中宣部学习会淡化文革  忠字舞民间回魂?](/articles/rfa/1045734.md)
@@ -598,6 +600,4 @@
 3-27 [中国揪出幕后“黑手”  美国要在新疆搞颜色革命？](/articles/rfa/1046030.md)
 
 3-27 [拜登参加欧盟峰会      呼吁确保民主国家制定规则](/articles/rfa/1046031.md)
-
-3-27 [中国渔船持续集结牛轭礁    在南海收集数据](/articles/rfa/1046032.md)
 
