--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-29 [作为见证与抗争 中国独立纪录片走过的高山低谷](/articles/voa/1041153.md)
+
 4-29 [中国称拜登上台后美军在中国周边活动大幅增加](/articles/voa/1041154.md)
 
 4-29 [受美国制裁影响 华为第一季度营收大幅下滑](/articles/voa/1041155.md)
@@ -598,6 +600,4 @@
 4-17 [外交官：匈牙利阻止欧盟就香港问题发表批评中国的声明](/articles/voa/1041451.md)
 
 4-17 [白宫宣布投入17亿美元抗击新冠病毒变种](/articles/voa/1041452.md)
-
-4-17 [非政府组织敦促美国奥委会采取行动 将北京冬奥会移到别国举办](/articles/voa/1041453.md)
 
