--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-29 [拜登印太布局走向战略清晰 美中美台关系平行发展](/articles/rfa/1045730.md)
+
+4-29 [中国的克里米亚在哪里？ 台学者：钓鱼岛](/articles/rfa/1045731.md)
+
 4-29 [继芯片 “大跃进”后   国产电动车 “大跃进”如箭在弦](/articles/rfa/1045732.md)
 
 4-29 [为配合百年党庆宣传    禁完网络论坛再禁脱口秀](/articles/rfa/1045733.md)
@@ -596,8 +600,4 @@
 3-29 [腾讯步阿里巴巴后尘     中国展开电商反垄断调查](/articles/rfa/1046028.md)
 
 3-29 [旧金山亚裔反歧视游行  因香港维吾尔人权问题内部起冲突](/articles/rfa/1046029.md)
-
-3-27 [中国揪出幕后“黑手”  美国要在新疆搞颜色革命？](/articles/rfa/1046030.md)
-
-3-27 [拜登参加欧盟峰会      呼吁确保民主国家制定规则](/articles/rfa/1046031.md)
 
