--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-29 [中国成功发射该国未来空间站“天和”核心舱](/articles/dw/1042724.md)
+
 4-29 [调查：一半以上青年想要离开香港发展](/articles/dw/1042725.md)
 
 4-29 [推土机前的金漆招牌--香港电台如何被迅速整治？](/articles/dw/1042726.md)
@@ -598,6 +600,4 @@
 4-12 [德国新冠染疫总人数超300万](/articles/dw/1043022.md)
 
 4-12 [高额罚款后  阿里巴巴股价强劲上扬](/articles/dw/1043023.md)
-
-4-12 [香港小学教材删除“中华民国政府”](/articles/dw/1043024.md)
 
