--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-29 [习近平刚走，广西一幼儿园就发生流血惨案](/articles/voa/1041151.md)
+
+4-29 [中国人口“有增无减” 国家统计局欲盖弥彰？](/articles/voa/1041152.md)
+
 4-29 [作为见证与抗争 中国独立纪录片走过的高山低谷](/articles/voa/1041153.md)
 
 4-29 [中国称拜登上台后美军在中国周边活动大幅增加](/articles/voa/1041154.md)
@@ -596,8 +600,4 @@
 4-17 [9名香港民主派人士反送中8-18案被判监8至18月 李柱铭等4人缓刑](/articles/voa/1041449.md)
 
 4-17 [北京渗透西方校园，美中教育交流能否给美国带来任何益处？](/articles/voa/1041450.md)
-
-4-17 [外交官：匈牙利阻止欧盟就香港问题发表批评中国的声明](/articles/voa/1041451.md)
-
-4-17 [白宫宣布投入17亿美元抗击新冠病毒变种](/articles/voa/1041452.md)
 
