--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-29 [印度疫情海啸般来袭 医疗系统不堪重负死亡人数屡创新高](/articles/voa/1041149.md)
+
+4-29 [美司法部通报：中国公民秦树人承认为中国军方采购并出口敏感产品和技术](/articles/voa/1041150.md)
+
 4-29 [习近平刚走，广西一幼儿园就发生流血惨案](/articles/voa/1041151.md)
 
 4-29 [中国人口“有增无减” 国家统计局欲盖弥彰？](/articles/voa/1041152.md)
@@ -596,8 +600,4 @@
 4-17 [美国代表团结束对台湾三天的访问](/articles/voa/1041447.md)
 
 4-17 [一名吉他手成为冲击国会骚乱事件的首位认罪嫌疑人](/articles/voa/1041448.md)
-
-4-17 [9名香港民主派人士反送中8-18案被判监8至18月 李柱铭等4人缓刑](/articles/voa/1041449.md)
-
-4-17 [北京渗透西方校园，美中教育交流能否给美国带来任何益处？](/articles/voa/1041450.md)
 
