--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-30 [受到新冠疫情重创 西班牙斗牛活动缓步重启](/articles/voa/1041148.md)
+
 4-29 [印度疫情海啸般来袭 医疗系统不堪重负死亡人数屡创新高](/articles/voa/1041149.md)
 
 4-29 [美司法部通报：中国公民秦树人承认为中国军方采购并出口敏感产品和技术](/articles/voa/1041150.md)
@@ -598,6 +600,4 @@
 4-17 [美中气候峰会前夕 中国官员称北京不太可能做出“新的承诺”](/articles/voa/1041446.md)
 
 4-17 [美国代表团结束对台湾三天的访问](/articles/voa/1041447.md)
-
-4-17 [一名吉他手成为冲击国会骚乱事件的首位认罪嫌疑人](/articles/voa/1041448.md)
 
