--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-30 [意大利电信公司计划取消华为参与5G](/articles/voa/1041143.md)
+
+4-30 [皮尤人口分析：亚裔美国人口达到2千4百万](/articles/voa/1041144.md)
+
 4-30 [“竞争但不寻求冲突” 体检拜登上任百日的对华政策](/articles/voa/1041145.md)
 
 4-30 [民调：60%港人不愿到大湾区工作或生活 学者指制度文化差异是主因](/articles/voa/1041146.md)
@@ -596,8 +600,4 @@
 4-17 [《周周侃》疑陷文字狱 旅美时评人回中国失联](/articles/voa/1041441.md)
 
 4-17 [菅义伟：与拜登再次确认台海和平重要性](/articles/voa/1041442.md)
-
-4-17 [美国务卿布林肯谴责对香港民主派领导人判刑的声明（全文翻译）](/articles/voa/1041443.md)
-
-4-17 [美国谴责将香港民主派人士判刑 联合国秘书长说21世纪不应有良心犯](/articles/voa/1041444.md)
 
