--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-30 [中国反制裁    欧洲议会威胁杯葛《欧中投资协定》](/articles/rfa/1045726.md)
+
 4-30 [两加拿大人被拘捕两年多   渥太华仍和中国有商业往来](/articles/rfa/1045727.md)
 
 4-30 [专访高智晟夫人耿和：我一定要找到他，无论生死!](/articles/rfa/1045728.md)
@@ -598,6 +600,4 @@
 3-29 [民进党立委穿“抵制新疆棉”品牌   声援维族人权](/articles/rfa/1046024.md)
 
 3-29 [协助港人两律师疑遭报复 律所被逼解散并禁办签证](/articles/rfa/1046025.md)
-
-3-29 [中国拉维族人澄清人权问题  维吾尔代表：族人被迫配合演出](/articles/rfa/1046026.md)
 
