--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-30 [欧盟报告：俄罗斯和中国散布有关西方疫苗的虚假信息](/articles/voa/1041142.md)
+
 4-30 [意大利电信公司计划取消华为参与5G](/articles/voa/1041143.md)
 
 4-30 [皮尤人口分析：亚裔美国人口达到2千4百万](/articles/voa/1041144.md)
@@ -598,6 +600,4 @@
 4-17 [港青逃亡美国三个月获得政庇 情不自禁为自由欢呼](/articles/voa/1041440.md)
 
 4-17 [《周周侃》疑陷文字狱 旅美时评人回中国失联](/articles/voa/1041441.md)
-
-4-17 [菅义伟：与拜登再次确认台海和平重要性](/articles/voa/1041442.md)
 
