--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-30 [新冠疫情减缓，美国人外出不用戴口罩，今年夏天可以去欧洲旅游了](/articles/rfi/1030807.md)
+
+4-30 [新冠补助 法国企业员工部分失业可延至五月底](/articles/rfi/1030808.md)
+
 4-30 [年度世卫大会将至 美欧多国力挺台湾 - 要闻分析](/articles/rfi/1030809.md)
 
 4-30 [美国国务卿布林肯谈美国对中国大外宣媒体待遇不变](/articles/rfi/1030810.md)
@@ -596,8 +600,4 @@
 4-26 [清华大学女生校庆舞惹议](/articles/rfi/1031105.md)
 
 4-26 [莫迪：疫情风暴撼动国家稳定 美国将紧急向印度提供疫苗原料](/articles/rfi/1031106.md)
-
-4-26 [俄罗斯总统助理：普京与拜登峰会可能在6月举行](/articles/rfi/1031107.md)
-
-4-26 [拜登就职总统将届满百日 民调显示 多数美国人满意](/articles/rfi/1031108.md)
 
