--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-30 [拜登首场国会演讲：美中争夺21世纪的胜利](/articles/voa/1041133.md)
+
+4-30 [专家：美国需加强在印太军事存在以抗衡中国](/articles/voa/1041134.md)
+
+4-30 [人口普查给共和党的政治获益可能最终惠及民主党](/articles/voa/1041135.md)
+
 4-30 [攻击美国国会案被捕人数超过430人](/articles/voa/1041136.md)
 
 4-30 [美情报总监：美若明确表态愿介入台海将导致中国四处搅局](/articles/voa/1041137.md)
@@ -594,10 +600,4 @@
 4-18 [俄罗斯乌克兰相互驱逐外交官](/articles/voa/1041431.md)
 
 4-18 [伊朗核协议谈判维也纳恢复举行](/articles/voa/1041432.md)
-
-4-18 [美欧谴责香港判决民主派人士，质疑中国履行国际承诺的意愿](/articles/voa/1041433.md)
-
-4-18 [美日联合领导人声明 — 美日面向新时代的全球合作伙伴](/articles/voa/1041434.md)
-
-4-18 [缅甸释放数千名犯人，民族团结政府呼吁国际社会承认](/articles/voa/1041435.md)
 
