--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-30 [辽宁舰台海演训常态化? 中国：航母不是「宅男」](/articles/dw/1042719.md)
+
 4-30 [疫情失控面临问责 印度扩大疫苗注射规模](/articles/dw/1042720.md)
 
 4-29 [中国影视圈再爆偷逃税事件: 郑爽步范冰冰后尘？](/articles/dw/1042721.md)
@@ -598,6 +600,4 @@
 4-12 [莱茵后浪拍前浪?奈何后浪先“阵亡”](/articles/dw/1043017.md)
 
 4-12 [评论：德国选项党 —— 渴望边界及花园侏儒](/articles/dw/1043018.md)
-
-4-12 [太空第一人尤里·加加林：载人航天的开端](/articles/dw/1043019.md)
 
