--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+4-30 [中国4月官方制造业和非制造业PMI均回落 市场需求恢复力度仍有不足](/articles/reuters/1038571.md)
+
 4-30 [财新中国4月制造业PMI超预期升至51.9 为四个月最高](/articles/reuters/1038572.md)
 
 4-30 [焦点：拜登上任满百日 很多应对中国挑战的关键议题仍在“审议中”](/articles/reuters/1038573.md)
@@ -598,6 +600,4 @@
 4-24 [经济复苏预期推动油价上涨 但亚洲疫情构成压力](/articles/reuters/1038869.md)
 
 4-24 [美元下跌 欧元盘尾获得额外提振刷新本周高位](/articles/reuters/1038870.md)
-
-4-24 [美股在强劲经济数据带动下跃升 关注下周科技巨头业绩报告](/articles/reuters/1038871.md)
 
