--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+4-30 [调查：铜价涨势可能在下半年减弱 因中国控制刺激支出](/articles/reuters/1038568.md)
+
+4-30 [财新4月中国制造业PMI创四个月高位 原材料涨价与输入性通胀仍是隐忧](/articles/reuters/1038569.md)
+
+4-30 [亚股下滑 但经济乐观情绪支撑全球股指接近纪录高位](/articles/reuters/1038570.md)
+
 4-30 [中国4月官方制造业和非制造业PMI均回落 市场需求恢复力度仍有不足](/articles/reuters/1038571.md)
 
 4-30 [财新中国4月制造业PMI超预期升至51.9 为四个月最高](/articles/reuters/1038572.md)
@@ -594,10 +600,4 @@
 4-24 [中国央行：对利用虚拟货币等逃避跨境赌博溯源新手法加强风险防范处置](/articles/reuters/1038866.md)
 
 4-24 [俄罗斯央行将指标利率上调至5% 暗示随后可能进一步加息](/articles/reuters/1038867.md)
-
-4-24 [钯金延续创纪录涨势 金价因美国数据强劲而下跌](/articles/reuters/1038868.md)
-
-4-24 [经济复苏预期推动油价上涨 但亚洲疫情构成压力](/articles/reuters/1038869.md)
-
-4-24 [美元下跌 欧元盘尾获得额外提振刷新本周高位](/articles/reuters/1038870.md)
 
