--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-30 [缅甸局势下TikTok的政治风险与机遇](/articles/ft/1045676.md)
+
 4-30 [科学早恋、阶层流动与婚姻内卷](/articles/ft/1045677.md)
 
 4-30 [从线下到线上，钟表业依然期待奇迹](/articles/ft/1045678.md)
@@ -598,6 +600,4 @@
 3-1 [美国众议院通过拜登1.9万亿美元新冠救助方案](/articles/ft/1045974.md)
 
 3-1 [解码美国“政-智旋转门”：哪些智库的对华研究最具影响力？（上）](/articles/ft/1045975.md)
-
-3-1 [吴国盛：中国科学史家肩负着沉重的社会责任](/articles/ft/1045976.md)
 
