--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-30 [以色列宗教活动爆重大踩踏事故 传38死逾百人伤 – 法国国际广播电台 - RFI](/articles/rfi/1030802.md)
+
+4-30 [巴西染疫病殁人数破40万人 – 法国国际广播电台 - RFI](/articles/rfi/1030803.md)
+
+4-30 [北卡罗来纳枪案5死 其中2人是警察 – 法国国际广播电台 - RFI](/articles/rfi/1030804.md)
+
 4-30 [世卫警告 印度疫情危机可能发生在任何地方 – 法国国际广播电台 - RFI](/articles/rfi/1030805.md)
 
 4-30 [习近平的中国未能说服大家 它真是初创企业的孵化器 - 法国世界报](/articles/rfi/1030806.md)
@@ -594,10 +600,4 @@
 4-26 [中国可能六月份将批准德国BionTech疫苗](/articles/rfi/1031100.md)
 
 4-26 [巴塞隆纳网球公开赛 纳达尔夺生涯第12座冠军 – 法国国际广播电台 - RFI](/articles/rfi/1031101.md)
-
-4-26 [瘟疫凶猛 西方国家紧急救援印度](/articles/rfi/1031102.md)
-
-4-26 [缅甸民间对东盟五项共识抱持怀疑 - 要闻分析](/articles/rfi/1031103.md)
-
-4-26 [爱拉斯莫的生活与思想第十六节 君主应具备的优良品性 - 欧洲思想文化长廊](/articles/rfi/1031104.md)
 
