--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-30 [从乒乓外交到抵制冬奥，美中关系和体育纠缠50年](/articles/voa/1041132.md)
+
 4-30 [拜登首场国会演讲：美中争夺21世纪的胜利](/articles/voa/1041133.md)
 
 4-30 [专家：美国需加强在印太军事存在以抗衡中国](/articles/voa/1041134.md)
@@ -598,6 +600,4 @@
 4-18 [捷克驱逐18名俄罗斯外交官](/articles/voa/1041430.md)
 
 4-18 [俄罗斯乌克兰相互驱逐外交官](/articles/voa/1041431.md)
-
-4-18 [伊朗核协议谈判维也纳恢复举行](/articles/voa/1041432.md)
 
