--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-30 [拜登时代的美中俄竞争，不止“民主vs.专制”这么简单](/articles/nyt/1046909.md)
+
 4-29 [《头彩》：超级富人值得同情吗？](/articles/nyt/1046910.md)
 
 4-29 [中国科技巨头的“狗咬狗”式竞争](/articles/nyt/1046911.md)
@@ -598,6 +600,4 @@
 2-5 [一个捐精的男人、他的几百个孩子和一个问题：为什么？](/articles/nyt/1047207.md)
 
 2-5 [英国监管机构吊销CGTN广播执照](/articles/nyt/1047208.md)
-
-2-5 [简报：英国吊销CGTN广播执照；中国新一波疫情趋于平稳](/articles/nyt/1047209.md)
 
