--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-30 [【CDTV】副处长体验外卖员，12小时仅赚41元](/articles/cdt/383106.md)
+
 4-30 [法治深一度 | 第五次起诉离婚后，她终于自由了](/articles/cdt/383107.md)
 
 4-30 [记者刘向南 | 孔网线上线下卖书被罚28万,当事人长篇自述来龙去脉](/articles/cdt/383117.md)
@@ -598,6 +600,4 @@
 3-30 [【CDTV】徐晓冬｜公民记者陈秋实最新动态：念念不忘必有回响](/articles/cdt/384364.md)
 
 3-30 [维舟｜对权力的共情](/articles/cdt/384366.md)
-
-3-30 [美国之音｜总书记亲民秀再遇喊冤女 寄希望于“青天大老爷”的冤民](/articles/cdt/384375.md)
 
