--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,22 @@
 法广
 ------
 
+4-30 [欧盟考虑建立芯片自家联盟](/articles/rfi/1030772.md)
+
+4-30 [抗议军政府施暴 缅甸男泳将放弃参加东京奥运 – 法国国际广播电台 - RFI](/articles/rfi/1030773.md)
+
+4-30 [港股追随亚洲市场跌势  收盘挫跌500多点 – 法国国际广播电台 - RFI](/articles/rfi/1030774.md)
+
+4-30 [以色列篝火节酿惨重踩踏 至少44死 – 法国国际广播电台 - RFI](/articles/rfi/1030775.md)
+
+4-30 [尼泊尔明起禁飞香港印巴菲延长禁飞期两周](/articles/rfi/1030776.md)
+
+4-30 [东奥组委会会长：今夏奥运有可能闭门举行 – 法国国际广播电台 - RFI](/articles/rfi/1030777.md)
+
+4-30 [港府两部门空中骂战被质疑是要废审计报告助行政机关避问责](/articles/rfi/1030778.md)
+
+4-30 [变种病毒本地个案首现香港400户须撤离](/articles/rfi/1030779.md)
+
 4-30 [白宫侧畔疑现神秘波类无形攻击](/articles/rfi/1030780.md)
 
 4-30 [朱利安尼住处遭FBI突袭 称证据将证明他的清白 – 法国国际广播电台 - RFI](/articles/rfi/1030781.md)
@@ -584,20 +600,4 @@
 4-26 [俄罗斯驱逐义大利武官  义大利抨击报复毫无根据 – 法国国际广播电台 - RFI](/articles/rfi/1031070.md)
 
 4-26 [法国专家：晶片产业是台湾最重要的战略力量](/articles/rfi/1031071.md)
-
-4-26 [上海酒吧直播奥斯卡典礼挺赵婷 VPN被切断](/articles/rfi/1031072.md)
-
-4-26 [菲律宾确诊破百万 官员吁不宜放宽限制 – 法国国际广播电台 - RFI](/articles/rfi/1031073.md)
-
-4-26 [投资人关注联准会动向及企业财报  亚股有涨有跌 – 法国国际广播电台 - RFI](/articles/rfi/1031074.md)
-
-4-26 [赵婷凭《无依之地》刷奥斯卡记录 中国媒体冷处理](/articles/rfi/1031075.md)
-
-4-26 [知名女中音路德维希辞世 享耆寿93岁 – 法国国际广播电台 - RFI](/articles/rfi/1031076.md)
-
-4-26 [疫情冲击下全球军事开支继续增加  中国军费连续26年递增](/articles/rfi/1031077.md)
-
-4-26 [新冠疫情：法国小学重开 进入复杂的返校期](/articles/rfi/1031078.md)
-
-4-26 [加拿大夫妇居新疆10年 感觉和维吾尔人同困大监狱 – 法国国际广播电台 - RFI](/articles/rfi/1031079.md)
 
