--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-30 [300多万人选修这门幸福课，他们学到了什么](/articles/nyt/1046907.md)
+
 4-30 [我们能活多久？](/articles/nyt/1046908.md)
 
 4-30 [拜登时代的美中俄竞争，不止“民主vs.专制”这么简单](/articles/nyt/1046909.md)
@@ -598,6 +600,4 @@
 2-5 [威权、爱国主义和14亿人：中国对新冠的一场“人民战争”](/articles/nyt/1047205.md)
 
 2-5 [缅甸民盟的“昂山素季造神运动”和垮台](/articles/nyt/1047206.md)
-
-2-5 [一个捐精的男人、他的几百个孩子和一个问题：为什么？](/articles/nyt/1047207.md)
 
