--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-1 [劳工组织：“一带一路”加剧海外中国劳工被强迫劳动](/articles/voa/1041118.md)
+
+5-1 [澳煤时代结束？ 用煤大户中国寻求美加煤炭](/articles/voa/1041119.md)
+
 5-1 [普京加紧镇压 纳瓦尔尼的组织宣布解散](/articles/voa/1041120.md)
 
 5-1 [布林肯下月出访乌克兰 支持基辅捍卫领土主权行动](/articles/voa/1041121.md)
@@ -596,8 +600,4 @@
 4-19 [中共党报发文警告港大学生会会长：等待你的只有监牢和手铐](/articles/voa/1041416.md)
 
 4-19 [印度新冠病例单日新病例超过26万 美国半数成年人接种了至少一剂疫苗](/articles/voa/1041417.md)
-
-4-19 [点亮希望的曙光 澳大利亚与新西兰开通彼此间免隔离检疫旅行](/articles/voa/1041418.md)
-
-4-19 [疫苗护照美国滞碍难行 群体免疫道阻且长](/articles/voa/1041419.md)
 
