--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-1 [印度最高法院保护民众对政府抗疫不力表达不满的权利](/articles/rfi/1030728.md)
+
+5-1 [印度染疫新增病例再创新高 全球确诊突破1.5亿例 – 法国国际广播电台 - RFI](/articles/rfi/1030729.md)
+
 5-1 [瞄准红土首冠  大&amp;#22338;直美马德里网赛首轮获胜 – 法国国际广播电台 - RFI](/articles/rfi/1030730.md)
 
 5-1 [白宫易主后，拜登政府国防部如何看待印太战略？ - 印太纵览](/articles/rfi/1030731.md)
@@ -596,8 +600,4 @@
 4-27 [理大冲突案 警方再拘21名助逃者 致中学生失应试机会](/articles/rfi/1031026.md)
 
 4-27 [港星5月26日启动旅游气泡 澳纽可望成下一站 港人接种疫苗成前提](/articles/rfi/1031027.md)
-
-4-27 [民阵向联合国发联署声明促改善中港人权 遭警方查问](/articles/rfi/1031028.md)
-
-4-27 [继亚股跌势 欧股开盘走势分歧 – 法国国际广播电台 - RFI](/articles/rfi/1031029.md)
 
