--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-1 [支联会: 六四未经批准集结案将判刑 当局严刑阻吓参与六四集会](/articles/voa/1041117.md)
+
 5-1 [劳工组织：“一带一路”加剧海外中国劳工被强迫劳动](/articles/voa/1041118.md)
 
 5-1 [澳煤时代结束？ 用煤大户中国寻求美加煤炭](/articles/voa/1041119.md)
@@ -598,6 +600,4 @@
 4-19 [用“战狼外交”讲中国故事 分析人士：这招不灵](/articles/voa/1041415.md)
 
 4-19 [中共党报发文警告港大学生会会长：等待你的只有监牢和手铐](/articles/voa/1041416.md)
-
-4-19 [印度新冠病例单日新病例超过26万 美国半数成年人接种了至少一剂疫苗](/articles/voa/1041417.md)
 
