--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-1 [【立此存照】苹果防丢神器AirTag中国版：不得镌刻敏感词](/articles/cdt/383094.md)
 
+5-1 [三联生活周刊｜15岁到28岁，我的黄金时代都在工厂流水线上](/articles/cdt/383098.md)
+
 4-30 [歪脑 | 北京会忘记付国豪，但香港不会](/articles/cdt/383100.md)
 
 4-30 [现代快报 | 男子被连骗4次：网上遇美女被骗、找“网警”被骗、再找被骗、找律师被骗](/articles/cdt/383101.md)
@@ -598,6 +600,4 @@
 3-31 [维舟｜爱国的两种话语](/articles/cdt/384348.md)
 
 3-31 [【404文库】复旦大学知和社 | 关于知和社无法参加2021春季学期百团大战的说明](/articles/cdt/384351.md)
-
-3-31 [德国之声 | 香港选举法改革：“爱国者”才有权参政议政](/articles/cdt/384352.md)
 
