--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-1 [接种中国疫苗：匈牙利仍是全球新冠死亡率最高国家之一](/articles/rfa/1045713.md)
+
 5-1 [加拿大香港人和台湾人发起身份认同：不称自己是中国人](/articles/rfa/1045714.md)
 
 5-1 [经济学人“台湾是地球最危险之地”   台湾人看法不一](/articles/rfa/1045715.md)
@@ -598,6 +600,4 @@
 3-30 [香港民主进程寿终正寝      立法会选举由选举委员会主导](/articles/rfa/1046011.md)
 
 3-30 [北京改变特首选举规则   本土地产商难再“造王”](/articles/rfa/1046012.md)
-
-3-30 [帕劳总统率团访台 美国驻帕劳大使随团受瞩目](/articles/rfa/1046013.md)
 
