--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-1 [焦点对话: 专访前美国国务次卿克拉奇: 我绝不会向习近平屈膝](/articles/voa/1041112.md)
+
+5-1 [庆祝植树节 第一夫人在白宫帮助种树](/articles/voa/1041113.md)
+
 5-1 [国际科学家再次呼吁世卫组织进一步调查新冠病毒起源](/articles/voa/1041114.md)
 
 5-1 [印度因新冠疫情陷入人道危机 美国救援物资飞抵新德里](/articles/voa/1041115.md)
@@ -596,8 +600,4 @@
 4-20 [纳瓦尔尼命悬一线 俄罗斯当局被指想置反对派于死地](/articles/voa/1041410.md)
 
 4-19 [新西兰称五眼联盟职权范围扩大令其不适](/articles/voa/1041411.md)
-
-4-19 [韩国将本国国民与朝鲜的网上信息分享纳入监管](/articles/voa/1041412.md)
-
-4-19 [欧盟制定印太合作战略计划 加强区域繁荣并非针对中国？](/articles/voa/1041413.md)
 
