--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+5-1 [差评｜看完这个老哥的曝光，我不想再打开智能电视了](/articles/cdt/383075.md)
+
 5-1 [【立此存照】苹果防丢神器AirTag中国版：不得镌刻敏感词](/articles/cdt/383094.md)
 
 5-1 [三联生活周刊｜15岁到28岁，我的黄金时代都在工厂流水线上](/articles/cdt/383098.md)
@@ -598,6 +600,4 @@
 3-31 [【异闻观止】湖南永顺对全县公职人员进行毛发验毒，目前已开除6人](/articles/cdt/384344.md)
 
 3-31 [维舟｜爱国的两种话语](/articles/cdt/384348.md)
-
-3-31 [【404文库】复旦大学知和社 | 关于知和社无法参加2021春季学期百团大战的说明](/articles/cdt/384351.md)
 
