--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-1 [白宫国安顾问：已向中国表明不可单方面改变台海现状](/articles/voa/1041109.md)
+
+5-1 [白宫：一亿美国成年人完全接种新冠疫苗](/articles/voa/1041110.md)
+
 5-1 [新冠疫情严重 美国对印度实施旅行限制](/articles/voa/1041111.md)
 
 5-1 [焦点对话: 专访前美国国务次卿克拉奇: 我绝不会向习近平屈膝](/articles/voa/1041112.md)
@@ -596,8 +600,4 @@
 4-20 [人权观察呼吁联合国对中国被控反人类罪展开调查](/articles/voa/1041407.md)
 
 4-20 [中国央行称将扩大数字人民币试点](/articles/voa/1041408.md)
-
-4-20 [台湾希望从美国购买先进的AGM-158导弹加强远程打击能力](/articles/voa/1041409.md)
-
-4-20 [纳瓦尔尼命悬一线 俄罗斯当局被指想置反对派于死地](/articles/voa/1041410.md)
 
