--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+5-1 [【图说天朝】中国驻日大使馆：“这就是美国送来的民主”](/articles/cdt/383073.md)
+
 5-1 [差评｜看完这个老哥的曝光，我不想再打开智能电视了](/articles/cdt/383075.md)
 
 5-1 [【立此存照】苹果防丢神器AirTag中国版：不得镌刻敏感词](/articles/cdt/383094.md)
@@ -598,6 +600,4 @@
 3-31 [Vista看天下｜“在豆瓣上打了个差评，至于被举报逼着道歉吗？”](/articles/cdt/384341.md)
 
 3-31 [【异闻观止】湖南永顺对全县公职人员进行毛发验毒，目前已开除6人](/articles/cdt/384344.md)
-
-3-31 [维舟｜爱国的两种话语](/articles/cdt/384348.md)
 
