--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-1 [规模6.8地震袭日本东北外海 未发海啸警报 – 法国国际广播电台 - RFI](/articles/rfi/1030715.md)
+
 5-1 [美检讨对北韩政策 白宫：就非核化外交磋商持开放态度 – 法国国际广播电台 - RFI](/articles/rfi/1030716.md)
 
 5-1 [中国人口红利恐消失](/articles/rfi/1030717.md)
@@ -598,6 +600,4 @@
 4-27 [哥伦比亚境内暴力升温 今年首季逾2.7万人逃离家园 – 法国国际广播电台 - RFI](/articles/rfi/1031013.md)
 
 4-27 [全面清查华航机师又有六位血清抗体呈阳性](/articles/rfi/1031014.md)
-
-4-27 [英国航母下月启航印太 日防相：象征着日英关系进入新阶段](/articles/rfi/1031015.md)
 
