--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-1 [中国再度上榜美国知识产权“黑名单”](/articles/voa/1041105.md)
+
 5-1 [美国务院：必须在世界卫生大会听到台湾的声音](/articles/voa/1041106.md)
 
 5-1 [苏利文称拜登百日执政让北京三思而行，专家展望下个百日](/articles/voa/1041107.md)
@@ -598,6 +600,4 @@
 4-20 [人类飞行史新篇章： 美宇航局小直升机火星试飞成功](/articles/voa/1041403.md)
 
 4-20 [时事大家谈: 凯迪网遭言论封杀，中国公知时代全面终结？](/articles/voa/1041404.md)
-
-4-20 [西点军校宣布大规模作弊案处理结果 六十余名学员被开除或留级](/articles/voa/1041405.md)
 
