--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-1 [白宫国家安全顾问：中国在气候变化方面的合作并非是给美国帮忙](/articles/voa/1041103.md)
+
 5-1 [韩国中国城项目因民众抗议喊停 中韩合作面临民意阻力](/articles/voa/1041104.md)
 
 5-1 [中国再度上榜美国知识产权“黑名单”](/articles/voa/1041105.md)
@@ -598,6 +600,4 @@
 4-20 [种族灭绝：对人权侵犯的最严厉指控是如何认定的？](/articles/voa/1041401.md)
 
 4-20 [医检官：1月6日冲击国会事件期间丧生的警察死于中风](/articles/voa/1041402.md)
-
-4-20 [人类飞行史新篇章： 美宇航局小直升机火星试飞成功](/articles/voa/1041403.md)
 
