--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+5-1 [王忠林传将升任湖北省长](/articles/rfi/1030689.md)
+
+5-1 [全球疫情逾1亿5130万例确诊 病殁超过318万 – 法国国际广播电台 - RFI](/articles/rfi/1030690.md)
+
+5-1 [印度新冠单日确诊病例星期五再创世界新纪录 - 要闻解说](/articles/rfi/1030691.md)
+
+5-1 [国际救援物资纷纷运抵新德里 - 法国报纸摘要](/articles/rfi/1030692.md)
+
 5-1 [台美互动延扩至巴黎 台湾驻法代表受邀首进美大使官邸](/articles/rfi/1030693.md)
 
 5-1 [中国5.1再现出游人山人海状](/articles/rfi/1030694.md)
@@ -592,12 +600,4 @@
 4-28 [法德呼吁欧盟尽快审议经济复苏计划](/articles/rfi/1030987.md)
 
 4-28 [艾隆-马斯克，你到底在想什么？](/articles/rfi/1030988.md)
-
-4-28 [投资人观望 欧股收低 – 法国国际广播电台 - RFI](/articles/rfi/1030989.md)
-
-4-28 [伊朗政坛惊爆录音门：苏莱曼尼与克里成伊美热议主角 - 要闻解说](/articles/rfi/1030990.md)
-
-4-28 [克里：中美不会因为没有对方作为处理气候问题伙伴而受益](/articles/rfi/1030991.md)
-
-4-28 [斯洛伐克一孔子学院外方院长电邮威胁研究人员后道歉](/articles/rfi/1030992.md)
 
