--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-1 [印度疫情严重可能加剧全球疫苗短缺](/articles/voa/1041100.md)
+
 5-1 [孙大午案前景暗淡 评论：赶上肃杀期](/articles/voa/1041101.md)
 
 5-1 [中国命令腾讯等大型科技公司限制其金融业务](/articles/voa/1041102.md)
@@ -598,6 +600,4 @@
 4-20 [拜登告诉议员：他愿在基础设施方案上妥协](/articles/voa/1041398.md)
 
 4-20 [白宫要义: 白宫宣布新冠疫苗足供全国使用，警告俄罗斯善待反对派领导人](/articles/voa/1041399.md)
-
-4-20 [保护记者委员会呼吁中国释放被囚禁记者并停止在宣传材料中使用他们](/articles/voa/1041400.md)
 
