--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-1 [众新闻 | 港大与学生会割席兼谴责 历年热心政事突扣“政治化”帽子](/articles/cdt/383027.md)
 
+5-1 [【404文库】十分正经研究所 | 向印度人民道歉](/articles/cdt/383031.md)
+
 5-1 [【立此存照】中央政法委官微嘲讽印度疫情：中国点火 vs 印度点火](/articles/cdt/383048.md)
 
 5-1 [南风窗 | 你家的创维电视正在监控你](/articles/cdt/383049.md)
@@ -598,6 +600,4 @@
 4-1 [北美新药科普历史网 | 世卫组织新冠朔源报告的三个缺憾](/articles/cdt/384277.md)
 
 4-1 [与归随笔 | 不接种疫苗，按“老赖”处理？](/articles/cdt/384279.md)
-
-4-1 [【网络民议】上海人口管理新规：在沪停留超24小时需登记  网友：要办沪照了](/articles/cdt/384282.md)
 
