--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-2 [2021五一节 厄瓜多尔因Covid疫情提前](/articles/rfi/1030681.md)
+
 5-1 [中国修改海上交通安全法 引忧虑](/articles/rfi/1030682.md)
 
 5-1 [中国政法委文点火批印度防疫不力却惹中国网民轰无胆接受人民评论](/articles/rfi/1030683.md)
@@ -598,6 +600,4 @@
 4-28 [看看王岐山 想想温家宝](/articles/rfi/1030979.md)
 
 4-28 [假如习近平给赵婷打电话](/articles/rfi/1030980.md)
-
-4-28 [印度精英逃离印度， 欧洲国家限制印度旅客入境](/articles/rfi/1030981.md)
 
