--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-2 [香港民主派团体及工会劳动节设街站 吁港人继续抗争](/articles/voa/1041097.md)
+
 5-2 [日台关系提升惹怒北京，中国国防部：非常危险](/articles/voa/1041098.md)
 
 5-1 [五大国外交官恢复会谈，就美国返回伊核协议进行斡旋](/articles/voa/1041099.md)
@@ -598,6 +600,4 @@
 4-20 [布林肯在地球日峰会前重申气候问题是美外交政策优先](/articles/voa/1041395.md)
 
 4-20 [庄稼价格飞涨 美国农民忧喜参半](/articles/voa/1041396.md)
-
-4-20 [监测环境和生命迹象的智能口罩](/articles/voa/1041397.md)
 
