--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-2 [美国北约开始从阿富汗撤军](/articles/voa/1041096.md)
+
 5-2 [香港民主派团体及工会劳动节设街站 吁港人继续抗争](/articles/voa/1041097.md)
 
 5-2 [日台关系提升惹怒北京，中国国防部：非常危险](/articles/voa/1041098.md)
@@ -598,6 +600,4 @@
 4-20 [末代棱皮海龟的生路在人类手里](/articles/voa/1041394.md)
 
 4-20 [布林肯在地球日峰会前重申气候问题是美外交政策优先](/articles/voa/1041395.md)
-
-4-20 [庄稼价格飞涨 美国农民忧喜参半](/articles/voa/1041396.md)
 
