--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-2 [印度疫情严重 达赖喇嘛与台湾视讯祈福 流亡藏人捐一日工资](/articles/rfa/1045709.md)
+
 5-1 [如何应对中共犯台?     美国安、国防、情报部门接连回应](/articles/rfa/1045710.md)
 
 5-1 [基辛格：美中应保持对话   但要守住价值观](/articles/rfa/1045711.md)
@@ -598,6 +600,4 @@
 3-31 [中国战狼外交秀又来了  李杨批特鲁多是走狗败家子](/articles/rfa/1046007.md)
 
 3-31 [马耳他记者调查政商勾结遭谋杀  资金线索涉一带一路项目](/articles/rfa/1046008.md)
-
-3-31 [国产奶粉质量低劣   三岁幼儿饮用致残](/articles/rfa/1046009.md)
 
