--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-2 [无逸说 | 中国点火vs印度点火，中国火神山vs印度火神山](/articles/cdt/383020.md)
 
+5-2 [观人随笔 | 当“圣母”成为贬义词](/articles/cdt/383026.md)
+
 5-1 [众新闻 | 港大与学生会割席兼谴责 历年热心政事突扣“政治化”帽子](/articles/cdt/383027.md)
 
 5-1 [【404文库】十分正经研究所 | 向印度人民道歉](/articles/cdt/383031.md)
@@ -598,6 +600,4 @@
 4-3 [【CDT 导览】电影审查在中国：谁在决定我们能看什么、不能看什么](/articles/cdt/384269.md)
 
 4-1 [情况有点复杂 | 中国有座城市，花了近30年把一条河熬成米其林级别的火锅汤底：淄博火锅鱼](/articles/cdt/384272.md)
-
-4-1 [北美新药科普历史网 | 世卫组织新冠朔源报告的三个缺憾](/articles/cdt/384277.md)
 
