--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+5-2 [拜登定调对朝新政策“务实”外交 朝鲜称美国有意维持敌对政策](/articles/reuters/1038518.md)
+
+5-2 [巴菲特称美国经济意外强劲复苏令伯克希尔哈撒韦受益](/articles/reuters/1038519.md)
+
 5-2 [巴菲特称SPAC并购是拿别人的钱赌博 伯克希尔哈撒韦很难拼得过](/articles/reuters/1038520.md)
 
 5-2 [伯克希尔哈撒韦Q1业绩从疫情泥沼中反弹 进行了更多回购](/articles/reuters/1038521.md)
@@ -596,8 +600,4 @@
 4-26 [万隆控股与主要股东云南白药订立MOU 拟组建从事工业大麻业务合营](/articles/reuters/1038816.md)
 
 4-26 [日本执政党在三个国会席位补选中全部失利 菅义伟政府受挫](/articles/reuters/1038817.md)
-
-4-26 [华融事件对中企美元债发行影响暂时有限 但偿债压力正上升--野村](/articles/reuters/1038818.md)
-
-4-26 [印度周一新增新冠病例数和死亡人数均再创新高](/articles/reuters/1038819.md)
 
