--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-2 [福建将放宽两岸隔离措施 两岸网民均表强烈不满](/articles/dw/1042676.md)
+
+5-2 [禁止本国公民从印度返国 澳出台最严格入境禁令](/articles/dw/1042677.md)
+
 5-2 [德国融合部长会议：降低移民子女入籍门槛](/articles/dw/1042678.md)
 
 5-2 [中国蝉联德国最大贸易伙伴 德企太依赖中国？](/articles/dw/1042679.md)
@@ -596,8 +600,4 @@
 4-15 [加拿大国会支持HFX论坛授奖蔡英文](/articles/dw/1042974.md)
 
 4-15 [中国女权运动再遭打压 运动人士忧遭「政治污名化」](/articles/dw/1042975.md)
-
-4-15 [美国针对与中国竞争召开听证会：科研经费落后](/articles/dw/1042976.md)
-
-4-15 [美称情报挑战严峻 中国成锁定焦点](/articles/dw/1042977.md)
 
