--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+5-2 [美国威州赌场枪击案2死1重伤 警方已击毙嫌犯 – 法国国际广播电台 - RFI](/articles/rfi/1030649.md)
+
+5-2 [马斯克麾下天龙太空船今自国际太空站成功返回地球 带回四人与辎重](/articles/rfi/1030650.md)
+
+5-2 [中国射火箭对比印度烧尸体引争议继续 政法委官网删图文了](/articles/rfi/1030651.md)
+
+5-2 [法国星期天报：中国成为联合国安理会轮值主席国，欧洲国家对此应该保持中立吗？ - 法国报纸摘要](/articles/rfi/1030652.md)
+
+5-2 [多家机构预测非洲经济今年复苏有望 - 聚焦非洲](/articles/rfi/1030653.md)
+
 5-2 [中国反对美台在法官员聚餐  斥为纵容台独势力](/articles/rfi/1030654.md)
 
 5-2 [香港恐现两至三代变种病毒传播 专家质疑有漏洞 促加强覆检及追踪](/articles/rfi/1030655.md)
@@ -590,14 +600,4 @@
 4-28 [美私校称打Covid疫苗有害他人 禁接种教师返校 – 法国国际广播电台 - RFI](/articles/rfi/1030947.md)
 
 4-28 [NBA唐西奇夺全场最高39分 独行侠大胜勇士 – 法国国际广播电台 - RFI](/articles/rfi/1030948.md)
-
-4-28 [印度新冠疫情严重失控 美国派“打击小组”紧急驰援](/articles/rfi/1030949.md)
-
-4-28 [中德政府会 李克强敦促合作 不干涉内政](/articles/rfi/1030950.md)
-
-4-28 [亚开行:亚洲新兴国明年GDP增5.3％](/articles/rfi/1030951.md)
-
-4-28 [澳大利亚将花费7.47亿澳元用于北部军事基地升级](/articles/rfi/1030952.md)
-
-4-28 [美国敦促尼日利亚与肯尼亚对中国投资睁大眼睛](/articles/rfi/1030953.md)
 
