--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-2 [修宪延长任期遭抗议 索马里总统被迫放弃 获联合国欢迎](/articles/rfi/1030643.md)
+
+5-2 [法国28吨医疗物资运抵印度 - 要闻解说](/articles/rfi/1030644.md)
+
+5-2 [重启核协议谈判 伊朗：据目前协议美将解除制裁 – 法国国际广播电台 - RFI](/articles/rfi/1030645.md)
+
 5-2 [5.1法国劳工游行震荡余波 瞄准马克龙猛攻掀话题](/articles/rfi/1030646.md)
 
 5-2 [烈火见真金：蔡咏梅看香港支联会32年风雨中的坚持 - 公民论坛](/articles/rfi/1030647.md)
@@ -594,10 +600,4 @@
 4-28 [美国警察面临种族歧视指控 离职自杀问题增加 – 法国国际广播电台 - RFI](/articles/rfi/1030941.md)
 
 4-28 [赵立坚推修改日本名画指海洋核废水污染 日本抗议](/articles/rfi/1030942.md)
-
-4-28 [拜登今赴国会 演说聚焦啥？](/articles/rfi/1030943.md)
-
-4-28 [广西！习近平前脚刚走今午后就喋血大案 幼儿园遭狂人乱刀 10多名幼儿倒地死伤不明](/articles/rfi/1030944.md)
-
-4-28 [印度德里缺氧 寺庙外救援站提供患者最后希望 – 法国国际广播电台 - RFI](/articles/rfi/1030945.md)
 
